--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbyvA9hIdj_51hN-EHjiDyF4bFNPDLaiPbp8uxvqylM_WOiqCP-KBLIvcu5Ivn9Ui2Wp/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
